added all wanted sfx into 1 const

--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
         const audioFiles = [
             "assets/marimba1.mp3", // Replace with your actual sound file paths
             "assets/marimba2.mp3",
-            "assets/marimba3.mp3"
+            "assets/marimba3.mp3",
+            "assets/harp1.mp3", // Replace with your actual sound file paths
+            "assets/harp2.mp3",
+            "assets/harp3.mp3",
+            "assets/bells1.mp3",
+            "assets/bells2.mp3",
+            
         ];
 
         const myButton = document.getElementById("myButton");
